--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -15,6 +15,10 @@
     {{script("/js/canvasjs.min.js")}}
     {{script("/js/jquery.canvasjs.min.js")}}
 
+   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script> 
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
