--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -14,11 +14,13 @@
     {{script("/js/angular_app.js")}}
     {{script("/js/canvasjs.min.js")}}
     {{script("/js/jquery.canvasjs.min.js")}}
+    {{script("/js/chart.min.js")}}
+    {{script("/js/angular-route.min.js")}}
 
    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script> 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
