--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -3,7 +3,9 @@
 <div class="container">
   <br><br>
   <div class="row">
-    <div class="col m6 offset-m3">
+    <div class="col m6 offset-m3 z-depth-5 #bdbdbd grey lighten-2" id="logPanel">
+      <br><br>
+      <h5>Service </h5>
       <form action="/log-test" method="POST" >
           {{ csrfField() }}
         <div class="row ">
