corrected admin panel

--- a/resources/views/report.edge
+++ b/resources/views/report.edge
@@ -66,9 +66,9 @@
    </thead>
    <tbody>
       <tr>
-        <td class="center-align"></td>
-        <td class="center-align"></td>
-        <td class="center-align"></td>
+        <td class="center-align">{{data[0]}}%</td>
+        <td class="center-align">{{data[1]}}%</td>
+        <td class="center-align">{{data[2]}}%</td>
       </tr>
 
   </tbody>
@@ -88,9 +88,9 @@
          </thead>
          <tbody >
             <tr >
-              <td class="center-align"></td>
-                <td class="center-align"></td>
-                  <td class="center-align"></td>
+              <td class="center-align">{{data[3]}}%</td>
+                <td class="center-align">{{data[4]}}%</td>
+                  <td class="center-align">{{data[5]}}%</td>
             </tr>
 
         </tbody>
